create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3286,3 +3286,736 @@ a {
     left: -1rem;
   }
 }
+.cid-tR6PQkCQR9 {
+  padding-top: 0px;
+  padding-bottom: 75px;
+  background-color: #ffffff;
+}
+.cid-tR6PQkCQR9 img {
+  width: auto;
+}
+.cid-tR6PQkTga3 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-tR6PQkTga3 img {
+  width: auto;
+}
+.cid-tR6PQl9vIq {
+  z-index: 1000;
+  width: 100%;
+}
+.cid-tR6PQl9vIq nav.navbar {
+  position: fixed;
+}
+.cid-tR6PQl9vIq .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tR6PQl9vIq .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-tR6PQl9vIq .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-tR6PQl9vIq .dropdown-item:hover,
+.cid-tR6PQl9vIq .dropdown-item:focus {
+  background: #fccd07 !important;
+  color: white !important;
+}
+.cid-tR6PQl9vIq .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-tR6PQl9vIq .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-tR6PQl9vIq .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-tR6PQl9vIq .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-tR6PQl9vIq .nav-link {
+  position: relative;
+}
+.cid-tR6PQl9vIq .container {
+  display: flex;
+  margin: auto;
+}
+.cid-tR6PQl9vIq .iconfont-wrapper {
+  color: #ffffff !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-tR6PQl9vIq .dropdown-menu,
+.cid-tR6PQl9vIq .navbar.opened {
+  background: #000000 !important;
+}
+.cid-tR6PQl9vIq .nav-item:focus,
+.cid-tR6PQl9vIq .nav-link:focus {
+  outline: none;
+}
+.cid-tR6PQl9vIq .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-tR6PQl9vIq .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-tR6PQl9vIq .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-tR6PQl9vIq .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tR6PQl9vIq .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-tR6PQl9vIq .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-tR6PQl9vIq .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  background: #000000;
+}
+.cid-tR6PQl9vIq .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-tR6PQl9vIq .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-tR6PQl9vIq .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-tR6PQl9vIq .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-tR6PQl9vIq .navbar.collapsed {
+  justify-content: center;
+}
+.cid-tR6PQl9vIq .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-tR6PQl9vIq .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-tR6PQl9vIq .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3rem);
+  }
+}
+.cid-tR6PQl9vIq .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-tR6PQl9vIq .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-tR6PQl9vIq .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-tR6PQl9vIq .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-tR6PQl9vIq .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-tR6PQl9vIq .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-tR6PQl9vIq .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-tR6PQl9vIq .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-tR6PQl9vIq .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-tR6PQl9vIq .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-tR6PQl9vIq .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-tR6PQl9vIq .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-tR6PQl9vIq .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-tR6PQl9vIq .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-tR6PQl9vIq .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-tR6PQl9vIq .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-tR6PQl9vIq .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-tR6PQl9vIq .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-tR6PQl9vIq .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-tR6PQl9vIq .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-tR6PQl9vIq .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 10px 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-tR6PQl9vIq .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-tR6PQl9vIq .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-tR6PQl9vIq .dropdown-item.active,
+.cid-tR6PQl9vIq .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-tR6PQl9vIq .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-tR6PQl9vIq .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-tR6PQl9vIq .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-tR6PQl9vIq .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #000000;
+}
+.cid-tR6PQl9vIq .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-tR6PQl9vIq .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-tR6PQl9vIq ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-tR6PQl9vIq .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-tR6PQl9vIq button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-tR6PQl9vIq button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #fccd07;
+}
+.cid-tR6PQl9vIq button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-tR6PQl9vIq button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tR6PQl9vIq button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tR6PQl9vIq button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-tR6PQl9vIq nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tR6PQl9vIq nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-tR6PQl9vIq nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-tR6PQl9vIq nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tR6PQl9vIq .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-tR6PQl9vIq a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-tR6PQl9vIq .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-tR6PQl9vIq .navbar {
+    height: 70px;
+  }
+  .cid-tR6PQl9vIq .navbar.opened {
+    height: auto;
+  }
+  .cid-tR6PQl9vIq .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-tRRw4XPjb1 {
+  z-index: 1000;
+  width: 100%;
+}
+.cid-tRRw4XPjb1 nav.navbar {
+  position: fixed;
+}
+.cid-tRRw4XPjb1 .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tRRw4XPjb1 .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-tRRw4XPjb1 .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-tRRw4XPjb1 .dropdown-item:hover,
+.cid-tRRw4XPjb1 .dropdown-item:focus {
+  background: #fccd07 !important;
+  color: white !important;
+}
+.cid-tRRw4XPjb1 .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-tRRw4XPjb1 .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-tRRw4XPjb1 .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-tRRw4XPjb1 .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-tRRw4XPjb1 .nav-link {
+  position: relative;
+}
+.cid-tRRw4XPjb1 .container {
+  display: flex;
+  margin: auto;
+}
+.cid-tRRw4XPjb1 .iconfont-wrapper {
+  color: #ffffff !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-tRRw4XPjb1 .dropdown-menu,
+.cid-tRRw4XPjb1 .navbar.opened {
+  background: #000000 !important;
+}
+.cid-tRRw4XPjb1 .nav-item:focus,
+.cid-tRRw4XPjb1 .nav-link:focus {
+  outline: none;
+}
+.cid-tRRw4XPjb1 .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-tRRw4XPjb1 .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-tRRw4XPjb1 .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-tRRw4XPjb1 .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tRRw4XPjb1 .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-tRRw4XPjb1 .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-tRRw4XPjb1 .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  background: #000000;
+}
+.cid-tRRw4XPjb1 .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-tRRw4XPjb1 .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-tRRw4XPjb1 .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-tRRw4XPjb1 .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-tRRw4XPjb1 .navbar.collapsed {
+  justify-content: center;
+}
+.cid-tRRw4XPjb1 .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-tRRw4XPjb1 .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-tRRw4XPjb1 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3rem);
+  }
+}
+.cid-tRRw4XPjb1 .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-tRRw4XPjb1 .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-tRRw4XPjb1 .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-tRRw4XPjb1 .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-tRRw4XPjb1 .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-tRRw4XPjb1 .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-tRRw4XPjb1 .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-tRRw4XPjb1 .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-tRRw4XPjb1 .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-tRRw4XPjb1 .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-tRRw4XPjb1 .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-tRRw4XPjb1 .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-tRRw4XPjb1 .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-tRRw4XPjb1 .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-tRRw4XPjb1 .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-tRRw4XPjb1 .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-tRRw4XPjb1 .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-tRRw4XPjb1 .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-tRRw4XPjb1 .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-tRRw4XPjb1 .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-tRRw4XPjb1 .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 10px 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-tRRw4XPjb1 .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-tRRw4XPjb1 .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-tRRw4XPjb1 .dropdown-item.active,
+.cid-tRRw4XPjb1 .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-tRRw4XPjb1 .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-tRRw4XPjb1 .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-tRRw4XPjb1 .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-tRRw4XPjb1 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #000000;
+}
+.cid-tRRw4XPjb1 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-tRRw4XPjb1 .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-tRRw4XPjb1 ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-tRRw4XPjb1 .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-tRRw4XPjb1 button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-tRRw4XPjb1 button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #fccd07;
+}
+.cid-tRRw4XPjb1 button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-tRRw4XPjb1 button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tRRw4XPjb1 button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tRRw4XPjb1 button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-tRRw4XPjb1 nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tRRw4XPjb1 nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-tRRw4XPjb1 nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-tRRw4XPjb1 nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tRRw4XPjb1 .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-tRRw4XPjb1 a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-tRRw4XPjb1 .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-tRRw4XPjb1 .navbar {
+    height: 70px;
+  }
+  .cid-tRRw4XPjb1 .navbar.opened {
+    height: auto;
+  }
+  .cid-tRRw4XPjb1 .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-tRRybnqpGl {
+  background-image: url("../../../assets/images/background9.jpg");
+}
+.cid-tRRybnqpGl .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tRRybnqpGl .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tRRybnqpGl .mbr-text,
+.cid-tRRybnqpGl .mbr-section-btn {
+  text-align: left;
+}
