--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2929,12 +2929,12 @@ a {
 .cid-tL9Bmhz2ww img {
   width: auto;
 }
-.cid-tAG18IsRXF {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #000000;
+.cid-u0QmhEBxmT {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
 }
-.cid-tAG18IsRXF img {
+.cid-u0QmhEBxmT img {
   width: auto;
 }
 .cid-tAG5fo3xKn {
@@ -3285,6 +3285,31 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
+}
+.cid-u0PnNR9h4c {
+  padding-top: 3rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-u0PnNR9h4c .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-u0PnNR9h4c .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-u0PfkQrVbB {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: white;
+}
+.cid-u0PfkQrVbB img {
+  width: auto;
 }
 .cid-tR6PQkCQR9 {
   padding-top: 0px;
