create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3303,6 +3303,14 @@ a {
   position: absolute;
   top: 0;
 }
+.cid-u0UhNeK4tH {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: white;
+}
+.cid-u0UhNeK4tH img {
+  width: auto;
+}
 .cid-tR6PQkCQR9 {
   padding-top: 0px;
   padding-bottom: 75px;
