create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2596,7 +2596,7 @@ a {
   background-color: #70c770;
 }
 .cid-u1yoW7QX2n .alert-danger {
-  background-color: #ff4a52;
+  background-color: #f71717;
 }
 .cid-u1yoW7QX2n .btn {
   display: inline-flex;
