create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4999,14 +4999,11 @@ a {
     left: -1rem;
   }
 }
-.cid-loBbPU3DP9 {
-  padding-top: 8rem;
-  padding-bottom: 1rem;
-  background-color: #fff0b0;
+.cid-u2Sxjozgor {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
 }
-.cid-loBbPU3DP9 .mbr-section-title {
-  text-align: center;
-}
-.cid-loBbPU3DP9 .frame {
-  min-height: 800px;
+.cid-u2Sxjozgor img {
+  width: auto;
 }
