--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4999,10 +4999,27 @@ a {
     left: -1rem;
   }
 }
+.cid-u2SzatZw5a {
+  padding-top: 7rem;
+  padding-bottom: 0rem;
+  background-color: #fff0b0;
+}
+.cid-u2SzatZw5a .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-u2SzatZw5a .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
 .cid-u2Sxjozgor {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #efefef;
+  background-color: #000000;
 }
 .cid-u2Sxjozgor img {
   width: auto;
